--- a/frontEnd/form1.html
+++ b/frontEnd/form1.html
@@ -24,7 +24,7 @@
                             <div class="underline"></div>
                         </li> -->
                         <li class="nav-item active-link">
-                            <a class="nav-link" href="./facilities.html">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                             <div class="underline"></div>
                         </li>
                         <li class="nav-item">
@@ -139,7 +139,22 @@
                           </select>
                     </div>
                     <br>
-                    <button class=" button1"><span><a href="./form2.html" class="text-decoration-none text-white">Next </a></span></button>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Coordinator Name : </label>
+                        <input type="text" class="form-control" id="coName" placeholder="Coordinator Name">
+                    </div>
+                    <br>
+                    <div>
+                        <label for="exampleInputEmail1" class="form-label"> Coordinator Email address :</label>
+                        <input type="email" class="form-control" id="coEmail" aria-describedby="emailHelp" placeholder="Coordinator Email">
+                      </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Coordinator phone no : </label>
+                        <input id="phone" type="tel" name="phone" class="form-control" placeholder="Coordinator Phone no"/>
+                    </div>
+                    <br>
+                    <a class=" button1" type="button" ><span>Submit</span></a>
                 </form>
             </div>
             <div class="col-lg-6">
